ThreadWeaver-related mtp crash fixes

Crashes seem to be caused by multiple deleting jobs or accessing them after
deletion, so avoid deleting them manually and passing them around
(https://mail.kde.org/pipermail/amarok-devel/2015-October/013807.html etc)

BUG: 467616